# crumbs

./: .coderabbit.yaml  AGENTS.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml
.sqlx/: query-1508e9677acbf94fd66e73f7370c3b01990ba4843bcc36bef24cd23338d01c2d.json  query-201a4396dffcc319a040be0c1cc1cbc0540aa56ad72aa3562dd943830fbb3821.json  query-21d3f68df2631e987d03c103ebe5d27a93ca87310f3dfb655b13a851da055c2e.json  query-449d5ba79f4971e20dd4da7b63339ad300ebc464378d529ed5cc5a0bfab1c1bc.json  query-44d278d7c896965a84ed079fbe29784463c8aeaa75ee704da622bb82ddfdd122.json  query-638f200544903d1719358a64d6c07b1937f61f5312e457dc0483d19253711284.json  query-98cb8a5593558194a5fe99841f4d27b1e1c60ef52bb5afd05a15f5dffc61ace8.json  query-9dd6373c706b79b0120cdd81f7fa466232e30bfc98296ed9a14141754b91f933.json  query-9f502e469c9296db886da44d1eb943941dbadfadfa58fd3353b563cee5cd071f.json  query-a4a60a3aae79ffde0bf9c787143058921df722bfe4d07a85d505a8f172694345.json  query-c486de824487be894da2d702fe532a950e9906279b0c830047df98b19c287bd0.json  query-f07aa1122394baaacdc6d452c1387e6dae362f55a1c927bafd81a5c116f0c49a.json
docs/: README.md  cli.md  intro.md  session-lifecycle.md  storage.md  tui.md
migrations/: 20260308173619_create-sessions-and-crumbs.sql
scripts/: init-test-db.sh
src/: app.rs  args.rs  config.rs  errors.rs  main.rs
src/cmds/: mod.rs
src/domain/: mod.rs
src/persistence/: crumb.rs  mod.rs  pool.rs  session.rs
src/tui/: app.rs  cmd.rs  handle.rs  help.rs  layout.rs  mod.rs  model.rs  msg.rs  theme.rs  update.rs  (+1 more)
(+3 files in other folders)
