[package]
name = "crumbs"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
keywords = [
    "ai-agents",
    "ai",
    "cli",
    "coding-agents",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".coderabbit.yaml",
    ".gitattributes",
    ".github",
    "AGENTS.md",
    "docs",
    "justfile",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
etcetera = "0.11.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["json", "macros", "migrate", "runtime-tokio", "sqlite"], default-features = false }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
